changed new Float to Float.valueOf