@@ -150,7 +150,7 @@ public class OilActivity extends Activity implements Runnable {
     	float ret = 0f;
     	
     	try {
-			ret = new Float(tokens[CURRENT_TOKEN].toString());//Get current token for this gauge activity, cast as float.
+			ret = Float.valueOf(tokens[CURRENT_TOKEN].toString());//Get current token for this gauge activity, cast as float.
 		} catch (NumberFormatException e) {
 			ret = 0f;
 		} catch(ArrayIndexOutOfBoundsException e){ //If the MC sneezes it can potentially screw up the CSV string sent over.
